--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,14 @@
   "description": "O teste consiste em criar uma aplicação que expõe uma API REST de um CRUD de produtos e autenticação, e uma aplicação web contendo uma interface para login e acesso a dados de uma API externa.",
   "main": "index.js",
   "scripts": {
+    "server": "ts-node-dev src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -18,7 +19,7 @@
     "mongoose": "^7.5.2"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.4",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mongoose": "^5.11.97",
